# workmake

./: Cargo.toml
cli/: Cargo.toml
cli/src/: account.rs  company.rs  error.rs  job.rs  main.rs  project.rs  search.rs  user.rs
cli/src/account/: add.rs  edit.rs  list.rs  remove.rs
cli/src/company/: add.rs  list.rs  mod.rs  remove.rs
cli/src/job/: add.rs  edit.rs  mod.rs
cli/src/project/: edit.rs  mod.rs  remove.rs
cli/src/user/: add.rs  edit.rs  list.rs  login.rs  logout.rs  mod.rs
core/: Cargo.toml
core/src/: account.rs
data/: Cargo.toml
data/src/: account.rs  address.rs  company.rs  contract.rs  cost.rs  document.rs  email.rs  event.rs  job.rs  lib.rs  member.rs  phone.rs  project.rs  time.rs  transaction.rs  url.rs  user.rs  uuid.rs
data/src/action/: mod.rs
docs/: competitor-companies.md
domain/: Cargo.toml
domain/src/: account.rs  auth.rs  contract.rs  error.rs  lib.rs  project.rs  user.rs
domain/src/repo/: account.rs  contract.rs  user.rs
domain/src/repos/: account.rs  contract.rs  mod.rs  project.rs  user.rs
domain/src/service/: account.rs  mod.rs  project.rs  user.rs
