[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.9"
clap = "3.1"
colored = "2.0"
thiserror = "1.0"
# inner
domain = { path = "../domain" }
data = { path = "../data" }
# optional
mimalloc-rust = { version = "0.1", optional = true }

[[bin]]
name = "willa"
path = "src/main.rs"

[features]
default = []
fast-alloc = ["mimalloc-rust"]