[package]
name = "data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { path = "../../common/uuid" }
url = { path = "../../common/url" }
email = { path = "../../common/email" }
time = { path = "../../common/time" }
